<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fetch_solution_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_solution"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/job_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/job_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/vehicle_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/vehicle_id"
        android:inputType="text" />
</LinearLayout>